--- a/extensions/firestore-send-email.env
+++ b/extensions/firestore-send-email.env
@@ -1,12 +1,17 @@
+AUTH_TYPE=UsernamePassword
 DATABASE=(default)
 DATABASE_REGION=nam5
-AUTH_TYPE=UsernamePassword
-SMTP_CONNECTION_URI=smtps://user@smtp.example.com:465
+DEFAULT_FROM=noreply@questscheduler.cc
+firebaseextensions.v1beta.function/location=us-central1
+firebaseextensions.v1beta.function/minInstances=0
+firebaseextensions.v1beta.function/vpcConnectorEgressSettings=VPC_CONNECTOR_EGRESS_SETTINGS_UNSPECIFIED
+firebaseextensions.v1beta.v2function/memory=256Mi
 MAIL_COLLECTION=mail
-DEFAULT_FROM=noreply@dndscheduler.app
-DEFAULT_REPLY_TO=
-USERS_COLLECTION=users
+OAUTH_PORT=465
+OAUTH_SECURE=true
+SMTP_CONNECTION_URI=smtps://apikey@smtp.sendgrid.net:465
+SMTP_PASSWORD=projects/${param:PROJECT_NUMBER}/secrets/firestore-send-email-SMTP_PASSWORD/versions/latest
 TEMPLATES_COLLECTION=mail-templates
 TTL_EXPIRE_TYPE=never
 TTL_EXPIRE_VALUE=1
-TLS_OPTIONS=
+USERS_COLLECTION=users
