--- a/firebase.json
+++ b/firebase.json
@@ -1,6 +1,8 @@
 {
   "hosting": {
-    "predeploy": ["npm --prefix web run build"],
+    "predeploy": [
+      "npm --prefix web run build:dev"
+    ],
     "public": "web/dist",
     "ignore": [
       "firebase.json",
@@ -8,8 +10,15 @@
       "**/node_modules/**"
     ],
     "rewrites": [
-      { "source": "**", "destination": "/index.html" }
+      {
+        "source": "**",
+        "destination": "/index.html"
+      }
     ]
+  },
+  "functions": {
+    "source": "functions",
+    "runtime": "nodejs20"
   },
   "extensions": {
     "firestore-send-email": "firebase/firestore-send-email@0.2.4"
