discord: mvp bot integration

--- a/functions/.env.example
+++ b/functions/.env.example
@@ -4,6 +4,11 @@
 QS_APP_URL=https://questscheduler.cc
 QS_ENC_KEY_B64=base64-encoded-32-byte-key
 
+# Discord configuration (non-secret). Secrets are stored in Secret Manager.
+# DISCORD_REGION=us-central1
+# DISCORD_TASK_QUEUE=processDiscordInteraction
+# DISCORD_OAUTH_REDIRECT_URI=https://us-central1-your-project.cloudfunctions.net/discordOAuthCallback
+
 # OAuth client JSON is stored in Secret Manager (QS_GOOGLE_OAUTH_CLIENT_JSON).
 # Local dev can use the JSON file instead.
 # Optional: override the OAuth client secret JSON path for local dev.
