chore: save work in progress

--- a/firebase.json
+++ b/firebase.json
@@ -24,6 +24,7 @@
     "firestore-send-email": "firebase/firestore-send-email@0.2.4"
   },
   "firestore": {
-    "rules": "firestore.rules"
+    "rules": "firestore.rules",
+    "indexes": "firestore.indexes.json"
   }
 }
