feat: avatar source selection + storage rules

--- a/firebase.json
+++ b/firebase.json
@@ -26,5 +26,8 @@
   "firestore": {
     "rules": "firestore.rules",
     "indexes": "firestore.indexes.json"
+  },
+  "storage": {
+    "rules": "storage.rules"
   }
 }
