--- a/web/package.json
+++ b/web/package.json
@@ -9,6 +9,17 @@
     "build:dev": "vite build --minify false --sourcemap",
     "lint": "eslint .",
     "test": "vitest",
+    "test:ui": "vitest --ui",
+    "test:coverage": "vitest --coverage",
+    "test:watch": "vitest --watch",
+    "test:e2e": "playwright test",
+    "test:e2e:ui": "playwright test --ui",
+    "test:e2e:debug": "playwright test --debug",
+    "test:rules": "firebase emulators:exec --only firestore,storage 'vitest run --config vitest.rules.config.js'",
+    "test:integration": "firebase emulators:exec 'vitest run --config vitest.integration.config.js'",
+    "test:all": "npm run test && npm run test:rules && npm run test:e2e",
+    "emulators": "firebase emulators:start",
+    "emulators:test": "firebase emulators:start --only firestore,auth,storage",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -40,6 +51,10 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
+    "@firebase/rules-unit-testing": "^5.0.0",
+    "@playwright/test": "^1.58.0",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.2",
     "@types/react": "^19.2.5",
     "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react": "^5.1.1",
@@ -48,6 +63,7 @@
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
     "globals": "^16.5.0",
+    "msw": "^2.12.7",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.17",
     "vite": "^7.2.4",
