--- a/web/package.json
+++ b/web/package.json
@@ -63,6 +63,7 @@
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
     "globals": "^16.5.0",
+    "jsdom": "^27.4.0",
     "msw": "^2.12.7",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.17",
