--- a/functions/package.json
+++ b/functions/package.json
@@ -5,6 +5,10 @@
     "node": "22"
   },
   "main": "index.js",
+  "scripts": {
+    "test": "vitest",
+    "test:watch": "vitest --watch"
+  },
   "dependencies": {
     "@discordjs/rest": "^2.6.0",
     "discord-api-types": "^0.38.37",
@@ -12,5 +16,9 @@
     "firebase-admin": "^12.7.0",
     "firebase-functions": "^7.0.3",
     "googleapis": "^140.0.0"
+  },
+  "devDependencies": {
+    "firebase-functions-test": "^3.4.0",
+    "vitest": "^3.2.4"
   }
 }
