--- a/functions/package.json
+++ b/functions/package.json
@@ -20,5 +20,8 @@
   "devDependencies": {
     "firebase-functions-test": "^3.4.0",
     "vitest": "^3.2.4"
+  },
+  "overrides": {
+    "undici": "6.23.0"
   }
 }
