--- a/functions/package.json
+++ b/functions/package.json
@@ -18,6 +18,7 @@
     "googleapis": "^140.0.0"
   },
   "devDependencies": {
+    "@vitest/coverage-v8": "^3.2.4",
     "firebase-functions-test": "^3.4.0",
     "vitest": "^3.2.4"
   },
