--- a/functions/.env.example
+++ b/functions/.env.example
@@ -1,5 +1,5 @@
 # Quest Scheduler Functions environment variables
-# Copy to .env for local use or .env.<projectId> for deploy.
+# Copy to .env.local for local use, or .env.<projectId> for deploy.
 
 QS_APP_URL=https://questscheduler.cc
 QS_ENC_KEY_B64=base64-encoded-32-byte-key
@@ -8,6 +8,9 @@ QS_ENC_KEY_B64=base64-encoded-32-byte-key
 # DISCORD_REGION=us-central1
 # DISCORD_TASK_QUEUE=processDiscordInteraction
 # DISCORD_OAUTH_REDIRECT_URI=https://us-central1-your-project.cloudfunctions.net/discordOAuthCallback
+#
+# Local-only overrides should live in .env.local to avoid leaking into deploys.
+# Prefer setting this in .env.<projectId> for deploys to avoid inheriting localhost values.
 
 # OAuth client JSON is stored in Secret Manager (QS_GOOGLE_OAUTH_CLIENT_JSON).
 # Local dev can use the JSON file instead.
