--- a/.gitignore
+++ b/.gitignore
@@ -25,8 +25,6 @@ extensions/*.secret.local
 **/.env
 **/.env.*
 !**/.env.example
-!functions/.env.quest-scheduler-stg
-!functions/.env.studio-473406021-87ead
 
 # OAuth client secrets (local only)
 client_secret*.json
@@ -36,3 +34,6 @@ quest-scheduler-staging-oauth.json
 # OS files
 .DS_Store
 Thumbs.db
+
+# Local tooling
+.gemini/settings.json
