--- a/web/package.json
+++ b/web/package.json
@@ -65,7 +65,7 @@
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
     "globals": "^16.5.0",
-    "jsdom": "^27.4.0",
+    "jsdom": "26.1.0",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.17",
     "vite": "^7.2.4",
